frame/election-provider-support/solution-type/tests/ui/fail/missing_voter.stderr
error: Expected binding: `VoterIndex = ...`
 --> $DIR/missing_voter.rs:4:2
  |
4 |     u16,
  |     ^^^
